@@ -1,3 +1,8 @@
+Sat Nov  3 18:35:55 2012  Kazuki Tsujimoto  <kazuki@callcc.net>
+
+	* vm.c (rb_vm_rewrite_ep_in_errinfo, vm_rewrite_ep_in_errinfo):
+	  merge code and remove `rb_vm_rewrite_ep_in_errinfo'.
+
 Sat Nov  3 18:15:24 2012  Kazuki Tsujimoto  <kazuki@callcc.net>
 
 	* vm.c, proc.c: avoid unnecessary `rb_vm_rewrite_ep_in_errinfo'
